fix: table overflow bug and adding tooltip to job runner
fix: formatting

--- a/packages/dm-core/src/styles/main.css
+++ b/packages/dm-core/src/styles/main.css
@@ -46,6 +46,10 @@ body {
   padding: 0;
 }
 
+.dm-table-row .dm-plugin-padding {
+  padding: 0.5rem;
+}
+
 Button,
 .transition-all {
   transition-property: all;
